--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "reactjs-timezone-select",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "description": "Simple flexible and dynamic React Timezone Selector",
   "main": "./index.js",
   "module": "./index.js",
   "types": "./index.d.ts",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --open --mode development --config webpack.dev.config.js",
     "build": "NODE_ENV=production rollup -c rollup.config.js"
   },
   "repository": {
@@ -51,7 +50,6 @@
     "@svgr/rollup": "^6.2.1",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.3",
-    "@testing-library/user-event": "13.5.0",
     "babel-jest": "27.3.1",
     "babel-loader": "8.1.0",
     "babel-plugin-import": "^1.13.5",
@@ -60,10 +58,6 @@
     "rollup": "^2.78.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-styles": "^4.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "webpack-bundle-analyzer": "4.4.1",
-    "webpack-cli": "4.9.1",
-    "webpack-dev-server": "4.7.4",
-    "webpack": "5.64.3"
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
